🚨 Fix: update checkstyle logic with spotless